feat: init Units

--- a/src/container/Dialogs.scss
+++ b/src/container/Dialogs.scss
@@ -1,3 +1,13 @@
-.Dialogs{
-	color: red;	
+.Dialogs-dialog{
+	position: relative;
+	.close-dialog-btn{
+		position: absolute;
+		top:0;
+		right: 0;
+		width: 5em;
+		height: 5em;
+		background-color: red;
+		border-radius: 50%;
+		cursor: pointer;
+	}
 }
