--- a/src/App.css
+++ b/src/App.css
@@ -35,5 +35,7 @@
   overflow: auto; }
 
 .App-wrapper-body {
+  display: flex;
   flex: 1;
-  overflow: auto; }
+  overflow: auto;
+  position: relative; }
