--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,34 @@
 .App {
-  width: 100vw;
-  height: 100vh; }
+  width: 1920px;
+  height: 1080px;
+}
 
 .App-home {
+  position: fixed;
   width: 100%;
   height: 100%;
   background-image: url("./images/home.jpg");
-  background-size: cover;
-  background-color: black; }
+  background-size: 1920px 1080px;
+  background-color: black;
+  z-index: 1;
+  overflow: hidden;
+}
 
 .App-home-nav {
+  position: absolute;
   display: flex;
   background-color: rgba(137, 123, 108, 0.7);
-  padding: 1em; }
+  padding: 20px;
+  top: 889px;
+  left: 0;
+  width: 1920px;
+  height: auto;
+}
+
+.App-home-nav .NavItem {
+  display: flex;
+  justify-content: center;
+}
 
 .App-wrapper {
   width: 100%;
@@ -21,21 +37,56 @@
   background-size: contain;
   background-color: black;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  position: relative;
+  z-index: 1;
+}
 
 .App-wrapper-header {
-  height: 80px; }
+  width: 100%;
+  height: 80px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 
 .App-wrapper-content {
+  position: absolute;
   display: flex;
   flex: 1;
-  width: 100%; }
+  width: 100%;
+  height: 780px;
+  top: 80px;
+  left: 0;
+}
 
 .App-wrapper-nav {
-  overflow: auto; }
+  position: absolute;
+  overflow: auto;
+  width: 500px;
+  height: 780px;
+  top: 0;
+  left: 0;
+  z-index: 5100;
+}
 
 .App-wrapper-body {
+  position: absolute;
+  width: 1920px;
+  height: 780px;
   display: flex;
   flex: 1;
   overflow: auto;
-  position: relative; }
+  top: 0;
+  left: 0;
+  padding-left: 500px;
+}
+
+.footer {
+  width: 1920px;
+  height: 220px;
+  position: absolute;
+  top: 860px;
+  left: 0;
+  z-index: 1;
+}
