--- a/src/App.scss
+++ b/src/App.scss
@@ -1,20 +1,35 @@
+@import 'styles/_config.scss';
+@import 'styles/_zIndex.scss';
+
 .App {
-	width: 100vw;
-    height: 100vh;
+	width: $App_width;
+    height: $App_height;
 }
 
 .App-home {
+    position: fixed;
     width: 100%;
     height: 100%;
     background-image: url('./images/home.jpg');
-    background-size: cover;
+    background-size: 1920px 1080px;
     background-color: black;
+    z-index: $zIndex_app;
+    overflow: hidden;
 }
 
 .App-home-nav {
+    position: absolute;
     display: flex;
     background-color: fade_out(#897b6c, 0.3);
-    padding: 1em;
+    padding: 20px;
+    top: $App_home_nav_top;
+    left: 0;
+    width: $App_width;
+    height: $App_home_nav_height;
+    .NavItem{
+        display: flex;
+        justify-content: center;
+    }
 }
 
 .App-wrapper {
@@ -25,25 +40,55 @@
     background-color: black;
     display: flex;
     flex-direction: column;
+    position: relative;
+    z-index: $zIndex_app;
 }
 
 .App-wrapper-header{
-	height: 80px;
+    width: 100%;
+	height: $App_header_height;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .App-wrapper-content{
+    position: absolute;
 	display: flex;
 	flex: 1;
 	width: 100%;
+    height: $App_content_height;
+    top:$App_header_height;
+    left: 0;
 }
 
 .App-wrapper-nav{
+    position: absolute;
     overflow: auto;
+    width: $App_nav_width;
+    height: $App_content_height;
+    top: 0;
+    left: 0;
+    z-index: $zIndex_app_nav;
 }
 
 .App-wrapper-body{
+    position: absolute;
+    width: $App_width;
+    height: $App_content_height;
     display: flex;
     flex:1;
     overflow: auto;
-    position: relative;
+    top: 0;
+    left: 0;
+    padding-left: $App_nav_width;
+}
+
+.footer{
+    width: $App_width;
+    height: $App_height - $App_header_height - $App_content_height;
+    position: absolute;
+    top:$App_header_height + $App_content_height;
+    left: 0;
+    z-index: $zIndex_app;
 }
