--- a/src/container/Dialogs.css
+++ b/src/container/Dialogs.css
@@ -1,11 +1,23 @@
-.Dialogs-dialog {
-  position: relative; }
-  .Dialogs-dialog .close-dialog-btn {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 5em;
-    height: 5em;
-    background-color: red;
-    border-radius: 50%;
-    cursor: pointer; }
+.Dialogs {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
+
+.Dialogs_black-screen {
+  transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+  background-color: rgba(0, 0, 0, 0.6);
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  will-change: opacity;
+  opacity: 0;
+}
+
+.Dialogs_black-screen.is-open {
+  z-index: 5000;
+  opacity: 1;
+}
