--- a/src/container/Dialogs.scss
+++ b/src/container/Dialogs.scss
@@ -1,13 +1,25 @@
-.Dialogs-dialog{
-	position: relative;
-	.close-dialog-btn{
-		position: absolute;
-		top:0;
-		right: 0;
-		width: 5em;
-		height: 5em;
-		background-color: red;
-		border-radius: 50%;
-		cursor: pointer;
+@import 'styles/_zIndex.scss';
+@import 'styles/_mixins.scss';
+
+.Dialogs{
+	position: fixed;
+	width: 100vw;
+	height: 100vh;
+	top: 0;
+	left: 0;
+	z-index: $zIndex_dialogs 
+}
+
+.Dialogs_black-screen{
+	@include transAnimation;
+	background-color: rgba(0, 0, 0, 0.6);
+	width: 100%;
+	height: 100%;
+	z-index: $zIndex_black_screen;
+	will-change: opacity;
+	opacity: 0;
+	&.is-open{
+		z-index: $zIndex_black_screen_open;
+		opacity: 1;
 	}
 }
