--- a/src/components/Unit.css
+++ b/src/components/Unit.css
@@ -1,5 +1,10 @@
 .Unit {
-  color: red;
-  position: absolute;
-  border: 1px solid blue;
-  cursor: pointer; }
+  position: absolute; }
+
+.Unit-text {
+  width: 300px;
+  cursor: pointer;
+  text-shadow: 5px 5px 10px black;
+  font-family: 'DFYanKai', sans-serif;
+  font-size: 36px;
+  color: white; }
