--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -5,3 +5,6 @@ $App_content_height:780px;
 $App_nav_width:500px;
 $App_home_nav_top:889px;
 $App_home_nav_height:auto;
+
+$tw_top: $App_header_height + 70px;
+$tw_left: $App_nav_width + 100px; 
