--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,30 @@
 @import 'styles/_config.scss';
 @import 'styles/_zIndex.scss';
+@import 'styles/_animations.scss';
 
 .App {
 	width: $App_width;
     height: $App_height;
+    overflow: hidden;
+    &.at-home{
+        .App-home{
+            z-index: $zIndex_app;
+            @include fade-in;
+        }
+        .App-wrapper{
+            display: none;
+        }
+    }
+
+    &.has-dialog{
+        // .App-wrapper-body, .footer{
+        //     filter: blur(1px);
+        // }
+    }
+
+    .App-home{
+        z-index: $zIndex_app - 1;
+    }
 }
 
 .App-home {
@@ -21,11 +42,12 @@
     position: absolute;
     display: flex;
     background-color: fade_out(#897b6c, 0.3);
-    padding: 20px;
     top: $App_home_nav_top;
     left: 0;
     width: $App_width;
     height: $App_home_nav_height;
+    z-index: $zIndex_app - 1;
+    animation: slide-in-bottom 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
     .NavItem{
         display: flex;
         justify-content: center;
@@ -41,7 +63,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    z-index: $zIndex_app;
+    z-index: $zIndex_app - 1;
 }
 
 .App-wrapper-header{
@@ -52,24 +74,15 @@
     left: 0;
 }
 
-.App-wrapper-content{
-    position: absolute;
-	display: flex;
-	flex: 1;
-	width: 100%;
-    height: $App_content_height;
-    top:$App_header_height;
-    left: 0;
-}
-
 .App-wrapper-nav{
     position: absolute;
     overflow: auto;
     width: $App_nav_width;
     height: $App_content_height;
-    top: 0;
+    top: $App_header_height;
     left: 0;
     z-index: $zIndex_app_nav;
+    background: linear-gradient(to right, rgba(128,45,0,1) 0%, rgba(231,56,39,0) 100%);
 }
 
 .App-wrapper-body{
@@ -79,9 +92,10 @@
     display: flex;
     flex:1;
     overflow: auto;
-    top: 0;
+    top: $App_header_height;
     left: 0;
     padding-left: $App_nav_width;
+    z-index: $zIndex_app_body;
 }
 
 .footer{
@@ -91,4 +105,5 @@
     top:$App_header_height + $App_content_height;
     left: 0;
     z-index: $zIndex_app;
+    animation: slide-in-bottom 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
