--- a/src/components/NavItem.css
+++ b/src/components/NavItem.css
@@ -7,5 +7,4 @@
   cursor: pointer;
   text-shadow: 2px 2px rgba(0, 0, 0, 0.3); }
   .NavItem:hover, .NavItem.selected {
-    color: black;
-    background-color: rgba(50, 50, 255, 0.2); }
+    background: linear-gradient(to right, #00527f 0%, rgba(231, 56, 39, 0) 100%); }
