--- a/src/components/NavItem.scss
+++ b/src/components/NavItem.scss
@@ -6,8 +6,7 @@
 	font-size: 42px;
 	cursor: pointer;
 	&:hover, &.selected{
-		color: black;
-		background-color: rgba(50, 50, 255, 0.2);
+		background: linear-gradient(to right, rgba(0,82,127,1) 0%, rgba(231,56,39,0) 100%);
 	}
 	text-shadow: 2px 2px rgba(0, 0, 0, 0.3);
 }
