--- a/src/container/Dialogs.scss
+++ b/src/container/Dialogs.scss
@@ -1,5 +1,10 @@
 @import 'styles/_zIndex.scss';
 @import 'styles/_mixins.scss';
+@import 'styles/_config.scss';
+@import 'styles/_color.scss';
+@import 'styles/_animations.scss';
+
+$contentMarginRight: 340px;
 
 .Dialogs{
 	position: fixed;
@@ -7,19 +12,107 @@
 	height: 100vh;
 	top: 0;
 	left: 0;
-	z-index: $zIndex_dialogs 
+	z-index: $zIndex_dialogs;
+	
+	&.is-open{
+		z-index: $zIndex_dialogs_open;
+		.Dialogs_black-screen{
+			z-index: $zIndex_black_screen_open;
+			opacity: 1;
+		}
+		.Dialogs-content{
+			z-index: $zIndex_black_screen_open + 1;
+		}
+		.Dialogs-taiwan{
+			z-index: $zIndex_black_screen_open + 2;
+		}
+		.Dialogs-close-btn{
+			z-index: $zIndex_tw_open + 1;
+		}
+	}
+	&.has-left-tw{
+		.Dialogs-taiwan{
+			left: $tw_left - 450px;		
+			z-index: $zIndex_tw_open;
+		}
+		.Dialogs-close-btn{
+			top: 250px;
+    		right: 30px;
+		}
+		.Dialogs-content{
+			$contentMarginLeft: 220px;
+			width: $App_width - $App_nav_width - $contentMarginLeft -50px;
+			left:$App_nav_width + $contentMarginLeft;
+			padding-left: 250px;
+		}
+	}
+	&.has-right-tw{
+		.Dialogs-taiwan{
+			left: $tw_left + 410px;	
+			z-index: $zIndex_tw_open;
+		}
+		.Dialogs-close-btn{
+			top: 240px;
+    		right: 380px;
+		}
+		.Dialogs-content{
+			width: $App_width - $contentMarginRight;
+			left:0;
+			padding-left: $App_nav_width;
+		}
+	}
+}
+
+$contentMarginTop:280px;
+.Dialogs-content{
+	@include transAnimation;
+	@include fade-in;
+	$contentHeight: $App_height - ($contentMarginTop * 2);
+	position: absolute;
+	background-color: $color_dialog_bg;
+	width: $App_width - $App_nav_width - $contentMarginRight;
+	height: $contentHeight;
+	top:$contentMarginTop;
+	left:$App_nav_width;
+}
+
+.Dialogs-close-btn {
+	$closeW: 80px;
+	$closeH: 80px;
+	@include transAnimation;
+	@include fade-in;
+    position: absolute;
+    top: $contentMarginTop - ($closeH / 2);
+    right: $contentMarginRight - ($closeW / 2);
+    width: $closeW;
+    height: $closeH;
+    background-color: black;
+    cursor: pointer;
+    z-index: $zIndex_black_screen;
+    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.8);
 }
 
 .Dialogs_black-screen{
 	@include transAnimation;
+	@include fade-in;
 	background-color: rgba(0, 0, 0, 0.6);
 	width: 100%;
 	height: 100%;
 	z-index: $zIndex_black_screen;
 	will-change: opacity;
 	opacity: 0;
-	&.is-open{
-		z-index: $zIndex_black_screen_open;
-		opacity: 1;
-	}
+}
+
+.Dialogs-taiwan{
+	@include fade-in;
+	position: absolute;
+	width: 800px;
+	height: 780px;
+	background-image: url('../images/taiwan.png');
+	background-size: contain;
+	background-repeat: no-repeat;
+	transition:all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+	top:$tw_top;
+	left: $tw_left;
+	z-index: $zIndex_tw_origin;
 }
