--- a/src/container/Units.scss
+++ b/src/container/Units.scss
@@ -1,34 +1,19 @@
-$tw_zIndex_origin:200;
-$tw_zIndex_open:9000;
-$unit_zIndex:210;
+@import 'styles/_zIndex.scss';
+@import 'styles/_mixins.scss';
+@import 'styles/_animations.scss';
 
 .Units{
+	@include transAnimation;
+	@include fade-in;
 	flex:1;
 	position: relative;
 	overflow: hidden;
 	.Unit{
-		z-index: $unit_zIndex;
+		z-index: $zIndex_unit;
+	}
+
+	&.is-open{
+		opacity: 0;
 	}
 }
 
-.Units__taiwan{
-	position: absolute;
-	width: 800px;
-	height: 780px;
-	background-image: url('../images/taiwan.png');
-	background-size: contain;
-	background-repeat: no-repeat;
-	transition:all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
-	top:0;
-	left: 200px;
-	z-index: $tw_zIndex_origin;
-
-	&.is-left{
-		left: -320px;		
-		z-index: $tw_zIndex_open;
-	}
-	&.is-right{
-		left: 540px;		
-		z-index: $tw_zIndex_open;
-	}
-}
