style: adjust fade in time

--- a/src/container/Matters.css
+++ b/src/container/Matters.css
@@ -3,8 +3,7 @@
   background-image: url("../images/line.png");
   background-size: auto 150px;
   background-position: 0 20px;
-  display: flex;
-}
+  display: flex; }
 
 .Matter-float {
   position: absolute;
@@ -12,11 +11,9 @@
   height: 120px;
   background-image: url("../images/matter/matter_float.png");
   background-size: cover;
-  top: 300px;
-}
+  top: 300px; }
 
 .Matter-content {
   background-image: url("../images/matter/matter_content.png");
   background-size: cover;
-  flex: 1;
-}
+  flex: 1; }
