--- a/src/components/Coin.css
+++ b/src/components/Coin.css
@@ -10,21 +10,15 @@
   text-align: center;
   cursor: pointer;
   color: white;
-  position: relative;
-}
-
-.Coin.selected {
-  background-image: url("../images/knot.png");
-}
-
-.Coin.selected .Coin-text {
-  background-image: url("../images/red_bg.png");
-  background-size: 100%;
-  background-repeat: no-repeat;
-  background-position: center -15px;
-  padding-bottom: 10px;
-}
+  position: relative; }
+  .Coin.selected {
+    background-image: url("../images/knot.png"); }
+    .Coin.selected .Coin-text {
+      background-image: url("../images/red_bg.png");
+      background-size: 100%;
+      background-repeat: no-repeat;
+      background-position: center -15px;
+      padding-bottom: 10px; }
 
 .Coin-text {
-  text-shadow: 0px 0px 8px rgba(0, 0, 0, 0.8);
-}
+  text-shadow: 0px 0px 8px rgba(0, 0, 0, 0.8); }
