--- a/src/components/NavItem.css
+++ b/src/components/NavItem.css
@@ -6,10 +6,7 @@
   font-family: 'DFYanKai', sans-serif;
   font-size: 42px;
   cursor: pointer;
-  text-shadow: 2px 2px rgba(0, 0, 0, 0.3);
-}
-
-.NavItem:hover, .NavItem.selected {
-  background: linear-gradient(to right, #00527f 0%, rgba(231, 56, 39, 0) 100%);
-  text-shadow: 0 0 10px;
-}
+  text-shadow: 2px 2px rgba(0, 0, 0, 0.3); }
+  .NavItem:hover, .NavItem.selected {
+    background: linear-gradient(to right, #00527f 0%, rgba(231, 56, 39, 0) 100%);
+    text-shadow: 0 0 10px; }
