--- a/src/container/Dialogs.scss
+++ b/src/container/Dialogs.scss
@@ -66,7 +66,7 @@ $contentMarginRight: 0px;
 $contentMarginTop:280px;
 .Dialogs-content{
 	@include transAnimation;
-	@include fade-in;
+	@include fade-in(0.6s);
 	$contentHeight: $App_height - ($contentMarginTop * 2);
 	position: absolute;
 	background-color: $color_dialog_bg;
@@ -98,7 +98,7 @@ $contentMarginTop:280px;
 
 .Dialogs_black-screen{
 	@include transAnimation;
-	@include fade-in;
+	@include fade-in(0.6s);
 	background-color: rgba(0, 0, 0, 0.6);
 	width: 100%;
 	height: 100%;
