--- a/src/container/Organizations.scss
+++ b/src/container/Organizations.scss
@@ -1,4 +1,5 @@
 @import 'styles/_mixins.scss';
+@import 'styles/_animations.scss';
 
 .Organizations{
 	height: 200px;
@@ -9,6 +10,7 @@
 }
 
 .Organization-content{
+	@include fade-in;
 	display: flex;
 	flex:1;
 	background-size: contain;
