--- a/src/container/Units.css
+++ b/src/container/Units.css
@@ -218,8 +218,12 @@
   animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
   flex: 1;
   position: relative;
-  overflow: hidden; }
+  overflow: hidden;
+  transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; }
   .Units .Unit {
+    transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
     z-index: 210; }
   .Units.is-open {
     opacity: 0; }
+    .Units.is-open .Unit {
+      opacity: 0; }
