--- a/src/container/Videos.css
+++ b/src/container/Videos.css
@@ -1,13 +1,11 @@
 .Videos {
   display: flex;
   height: 100%;
-  justify-content: center;
-}
+  justify-content: center; }
 
 .Video-content {
   background-image: url("../images/video/video_content.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center center;
-  flex: 1;
-}
+  flex: 1; }
