--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,12 @@
 @font-face {
   font-family: DFYanKai;
-  src: url(fonts/DFYanKai-W5-WIN-BF.ttf) format("truetype");
-}
+  src: url(fonts/DFYanKai-W5-WIN-BF.ttf) format("truetype"); }
 
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  overflow: hidden;
-}
+  overflow: hidden; }
 
 * {
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
